# while-mlir

./: CMakeLists.txt  README.md
include/while/: AST.h  Dialect.h  Lexer.h  MLIRGen.h  Ops.td  Parser.h  ast_expression.h  ast_statement.h  parsed_value.h
src/: AST.cpp  Dialect.cpp  MLIRGen.cpp  ast_statement.cpp  main.cpp
